--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@ choice)" rel="stylesheet" type="text/css">
               <li class="padding"><a href="faqs.html">FAQs</a></li>
               <div class="divide"></div>
               <li class="padding"><a href="contact.html">Contact</a></li>
-              <li class="padding butt"><a href="contact.html"> Get Demo</a></li>
+              <li class="butt"><a href="contact.html"> Get Demo</a></li>
             </ul>
           </div>
         </nav>
@@ -182,7 +182,10 @@ choice)" rel="stylesheet" type="text/css">
                   <a href="http://" class="h6" style="width: 6rem;"> <p class="ml-3 mt-3"> Get Demo </p></a>
                 </form>
                 <p class="h6 mt-3">Don't worry we will only send messages concerning product launch</p>
-               <div class="container mt-4" style="width: 100%; border:1px solid grey;"></div>
+
+               <div class="sc mt-4" style="border:1px solid grey;"></div>
+
+               
                <div class=" mt-3 container-fluid socials">
                  <div class="follow">
                    <p class="h6">Follow us: </p>
@@ -202,7 +205,8 @@ choice)" rel="stylesheet" type="text/css">
     
       </section>
 
-      <section class="footer mt-5">
+      <section class="foot mt-5">
+        <div class="footer">
         <ul>
           <a href="http://" class=" footer-brand"
             >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
