--- a/about.html
+++ b/about.html
@@ -19,104 +19,116 @@
     <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
-    <div class="background">
-      <section>
-        <nav class="nav1 container-fluid row thick">
-          <div class="col-3">
-            <ul class=" d-flex justify-content-start inline">
-              <li class="padding bord">
-                <a href="home.html"
-                  >Comms<span><img src="img/w.png" alt="" srcset=""/></span
-                  >orth</a
-                >
-              </li>
-              <div class="divide"></div>
-              <li class="padding"><a href="#">ProjectOS</a></li>
-            </ul>
-          </div>
-          <div class="col-9 color">
-            <ul class=" d-flex justify-content-end">
-              <li class="padding"><a href="about.html">About</a></li>
-              <li class="padding"><a href="license.html">Licensing</a></li>
-              <li class="padding bord"><a href="faqs.html">FAQs</a></li>
-              <div class="divide"></div>
-              <li class="padding"><a href="contact.html">Contact</a></li>
-              <li class="padding butt"><a href="contact.html"> Get Demo</a></li>
-            </ul>
-          </div>
-        </nav>
+    <div class="background"></div>
+    <section>
+      <nav class="nav1 container-fluid row thick">
+        <div class="col-3">
+          <ul class=" d-flex justify-content-start inline">
+            <li class="padding bord">
+              <a href="home.html"
+                >Comms<span><img src="img/w.png" alt="" srcset=""/></span
+                >orth</a
+              >
+            </li>
+            <div class="divide"></div>
+            <li class="padding"><a href="#">ProjectOS</a></li>
+          </ul>
+        </div>
+        <div class="col-9 color">
+          <ul class=" d-flex justify-content-end">
+            <li class="padding"><a href="about.html">About</a></li>
+            <li class="padding"><a href="license.html">Licensing</a></li>
+            <li class="padding bord"><a href="faqs.html">FAQs</a></li>
+            <div class="divide"></div>
+            <li class="padding"><a href="contact.html">Contact</a></li>
+            <li class="padding butt"><a href="contact.html"> Get Demo</a></li>
+          </ul>
+        </div>
+      </nav>
 
-        <nav class="nav2 navbar navbar-expand-md bg-dark navbar-dark">
-          <div class="flex-btw">
-            <a class="navbar-brand" href="home.html"
-              >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
-            >
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#collapsibleNavbar"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="home.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">ProjectOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="license.html">Licensing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="faqs.html">FAQS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Get Demo</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+      <nav class="nav2 navbar navbar-expand-md bg-dark navbar-dark">
+        <div class="flex-btw">
+          <a class="navbar-brand" href="home.html"
+            >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#collapsibleNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ProjectOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="license.html">Licensing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faqs.html">FAQS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Get Demo</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-        <div class="row drop">
-          <div class="text-center col-12 p3" style="color: honeydew;">
-            <p class="h2 hp">Traditional project management can't endure</p>
+      <div class="row drop">
+        <div class="text-center col-12 p3" style="color: honeydew;">
+          <p class="h2 hp">Traditional project management can't endure</p>
 
-            <div class="ad">
-              <a href="contact.html" class="butt1">Request Demo</a>
-            </div>
+          <div class="ad">
+            <a href="contact.html" class="butt1">Request Demo</a>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <div class="cd1">
-        <div class="cda">
+    <div class="cd1">
+      <div class="cda">
+        <div class="cdaa">
           <img src="img/budget.png" alt="" srcset="" />
+        </div>
+        <div class="cdab">
           <p class="cd-text">Buget Tracking</p>
+
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
             nobis facilis esse molestias distinctio beatae!
           </p>
         </div>
-        <div class="cda">
+      </div>
+      <div class="cda">
+        <div class="cdaa">
           <img src="img/project.png" alt="" srcset="" />
+        </div>
+        <div class="cdab">
           <p class="cd-text">Project Tracking</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
             nobis facilis esse molestias distinctio beatae!
           </p>
         </div>
-        <div class="cda">
+      </div>
+      <div class="cda">
+        <div class="cdaa">
           <img src="img/geo.png" alt="" srcset="" />
+        </div>
+        <div class="cdab">
           <p class="cd-text">Geo Tracking</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
@@ -127,21 +139,29 @@
     </div>
     <div class="cd2">
       <div class="cda">
-        <img src="img/contract.png" alt="" srcset="" />
-        <p class="cd-text">Contract Manager</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
-          nobis facilis esse molestias distinctio beatae!
-        </p>
+        <div class="cdaa">
+          <img src="img/contract.png" alt="" srcset="" />
+        </div>
+        <div class="cdab">
+          <p class="cd-text">Contract Manager</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
+            nobis facilis esse molestias distinctio beatae!
+          </p>
+        </div>
       </div>
 
       <div class="cda">
-        <img src="img/insight.png" alt="" srcset="" />
-        <p class="cd-text">Performance Insights</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
-          nobis facilis esse molestias distinctio beatae!
-        </p>
+        <div class="cdaa">
+          <img src="img/insight.png" alt="" srcset="" />
+        </div>
+        <div class="cdab">
+          <p class="cd-text">Performance Insights</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
+            nobis facilis esse molestias distinctio beatae!
+          </p>
+        </div>
       </div>
     </div>
 
@@ -194,10 +214,7 @@
     ></a>
 
     <section>
-      <div
-        class="container divider"
-        style="width: 100%; border:1px solid grey;"
-      ></div>
+      <div class="sc divider" style="border:1px solid grey;"></div>
       <div class=" mt-3 container-fluid socials">
         <div class="follow">
           <p class="h6">Follow us:</p>
@@ -214,43 +231,44 @@
       </div>
     </section>
 
-    <section class="footer mt-5">
-      <ul>
-        <a href="http://" class=" footer-brand"
-          >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
-        >
-        <li>© 2019</li>
-      </ul>
+    <section class="foot mt-5">
+      <div class="footer">
+        <ul>
+          <a href="http://" class=" footer-brand"
+            >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
+          >
+          <li>© 2019</li>
+        </ul>
+        <ul>
+          <a href="http://">PROJECT OS</a>
+          <li><a href="about.html">About</a></li>
+          <li><a href="http://">Support</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
+          <li><a href="license.html">Licensing</a></li>
+        </ul>
 
-      <ul>
-        <a href="http://">PROJECT OS</a>
-        <li><a href="about.html">About</a></li>
-        <li><a href="http://">Support</a></li>
-        <li><a href="faqs.html">FAQs</a></li>
-        <li><a href="license.html">Licensing</a></li>
-      </ul>
+        <ul>
+          <a href="http://">Follow US</a>
+          <li><a href="http://">Facebook</a></li>
+          <li><a href="http://">Linkedin</a></li>
+          <li><a href="http://">Twitter</a></li>
+        </ul>
 
-      <ul>
-        <a href="http://">Follow US</a>
-        <li><a href="http://">Facebook</a></li>
-        <li><a href="http://">Linkedin</a></li>
-        <li><a href="http://">Twitter</a></li>
-      </ul>
+        <ul>
+          <a href="http://">LEGAL</a>
+          <li><a href="http://">Privacy Policy</a></li>
+          <li><a href="http://">Terms of Service</a></li>
+          <li><a href="http://">Cookies Policy</a></li>
+        </ul>
 
-      <ul>
-        <a href="http://">LEGAL</a>
-        <li><a href="http://">Privacy Policy</a></li>
-        <li><a href="http://">Terms of Service</a></li>
-        <li><a href="http://">Cookies Policy</a></li>
-      </ul>
-
-      <ul>
-        <a href="contact.html">CONTACT</a>
-        <li><a href="http://">+2348180321046</a></li>
-        <li><a href="http://">support@projectos.com</a></li>
-      </ul>
+        <ul>
+          <a href="contact.html">CONTACT</a>
+          <li><a href="http://">+2348180321046</a></li>
+          <li><a href="http://">support@projectos.com</a></li>
+        </ul>
+      </div>
     </section>
-
+    <script src="js/about.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
