--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <li class="padding"><a href="faqs.html">FAQs</a></li>
             <div class="divide"></div>
             <li class="padding active"><a href="contact.html">Contact</a></li>
-            <li class="padding butt"><a href="contact.html"> Get Demo</a></li>
+            <li class=" padding butt"><a href="contact.html"> Get Demo</a></li>
           </ul>
         </div>
       </nav>
@@ -88,7 +88,7 @@
     </section>
 
     <section class="row">
-        <div class="col-5 pad">
+        <div class="col-md-5 col-sm-12 pad">
           <h1>Contact</h1>
 
           <div class="address subpad">
@@ -138,7 +138,7 @@
           </div>
         </div>
         <div
-          class="form pad2 col-7">
+          class="form pad2 col-sm-12 col-md-7">
 
           <form action="/action_page.php">
             <label for="fname">First Name</label>
@@ -182,14 +182,14 @@
       </div>
     </section>
 
-    <section class="footer mt-5">
+    <section class="foot mt-5">
+      <div class="footer">
       <ul>
         <a href="http://" class=" footer-brand"
           >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
         >
         <li>© 2019</li>
       </ul>
-
       <ul>
         <a href="http://">PROJECT OS</a>
         <li><a href="about.html">About</a></li>
@@ -217,6 +217,7 @@
         <li><a href="http://">+2348180321046</a></li>
         <li><a href="http://">support@projectos.com</a></li>
       </ul>
+      </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
