--- a/faqs.html
+++ b/faqs.html
@@ -100,7 +100,7 @@
 
     <section>
       <div class="row">
-        <div class="col-3">
+        <div class="col-md-3 col-sm-12">
           <div class="tof">
             <ul>
               <p class="h4">Table of Contents</p>
@@ -111,7 +111,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-9">
+        <div class="col-md-9 col-sm-12">
           <button type="button" class="collapsible">
             <i class="fas fa-plus"></i>Lorem ipsum dolor sit amet consectetur,
             adipisicing elit.
@@ -165,10 +165,7 @@
     </section>
 
     <section>
-      <div
-        class="container divider"
-        style="width: 100%; border:1px solid grey;"
-      ></div>
+      <div class="sc mt-4" style="border:1px solid grey;"></div>
       <div class=" mt-3 container-fluid socials">
         <div class="follow">
           <p class="h6">Follow us:</p>
@@ -185,14 +182,14 @@
       </div>
     </section>
 
-    <section class="footer mt-5">
+    <section class="foot mt-5">
+      <div class="footer">
       <ul>
         <a href="http://" class=" footer-brand"
           >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
         >
         <li>© 2019</li>
       </ul>
-
       <ul>
         <a href="http://">PROJECT OS</a>
         <li><a href="about.html">About</a></li>
@@ -220,6 +217,7 @@
         <li><a href="http://">+2348180321046</a></li>
         <li><a href="http://">support@projectos.com</a></li>
       </ul>
+      </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
