--- a/license.html
+++ b/license.html
@@ -167,7 +167,7 @@
         <p class="h3">Add-on Licensing</p>
         <p>Get even more control of projectOS with add-on licensing</p>
       </div>
-      <div class="flx container">
+      <div class="flx">
         <div class="box">
           <div class="bt heading1 text-center">Developer License</div>
           <div class="flx2">
@@ -232,10 +232,7 @@
       </div>
     </section>
     <section>
-      <div
-        class="container divider"
-        style="width: 100%; border:1px solid grey;"
-      ></div>
+      <div class="sc mt-4" style="border:1px solid grey;"></div>
       <div class=" mt-3 container-fluid socials">
         <div class="follow">
           <p class="h6">Follow us:</p>
@@ -251,41 +248,42 @@
         </div>
       </div>
     </section>
-    <section class="footer mt-5">
-      <ul>
-        <a href="http://" class=" footer-brand"
-          >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
-        >
-        <li>© 2019</li>
-      </ul>
+    <section class="foot mt-5">
+      <div class="footer">
+        <ul>
+          <a href="http://" class=" footer-brand"
+            >Comms<span><img src="img/w.png" alt="" srcset=""/></span>orth</a
+          >
+          <li>© 2019</li>
+        </ul>
+        <ul>
+          <a href="http://">PROJECT OS</a>
+          <li><a href="about.html">About</a></li>
+          <li><a href="http://">Support</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
+          <li><a href="license.html">Licensing</a></li>
+        </ul>
 
-      <ul>
-        <a href="http://">PROJECT OS</a>
-        <li><a href="about.html">About</a></li>
-        <li><a href="http://">Support</a></li>
-        <li><a href="faqs.html">FAQs</a></li>
-        <li><a href="license.html">Licensing</a></li>
-      </ul>
+        <ul>
+          <a href="http://">Follow US</a>
+          <li><a href="http://">Facebook</a></li>
+          <li><a href="http://">Linkedin</a></li>
+          <li><a href="http://">Twitter</a></li>
+        </ul>
 
-      <ul>
-        <a href="http://">Follow US</a>
-        <li><a href="http://">Facebook</a></li>
-        <li><a href="http://">Linkedin</a></li>
-        <li><a href="http://">Twitter</a></li>
-      </ul>
+        <ul>
+          <a href="http://">LEGAL</a>
+          <li><a href="http://">Privacy Policy</a></li>
+          <li><a href="http://">Terms of Service</a></li>
+          <li><a href="http://">Cookies Policy</a></li>
+        </ul>
 
-      <ul>
-        <a href="http://">LEGAL</a>
-        <li><a href="http://">Privacy Policy</a></li>
-        <li><a href="http://">Terms of Service</a></li>
-        <li><a href="http://">Cookies Policy</a></li>
-      </ul>
-
-      <ul>
-        <a href="contact.html">CONTACT</a>
-        <li><a href="http://">+2348180321046</a></li>
-        <li><a href="http://">support@projectos.com</a></li>
-      </ul>
+        <ul>
+          <a href="contact.html">CONTACT</a>
+          <li><a href="http://">+2348180321046</a></li>
+          <li><a href="http://">support@projectos.com</a></li>
+        </ul>
+      </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
